syntax = "proto3";

package CashProto;

message SpecialCashItemDto {
  int32 sn = 1;
  int32 modifier = 2;
  int32 info = 3;
}

message SpecialCashItemListDto {
  repeated SpecialCashItemDto items = 1;
}
