syntax = "proto3";

import "Dto/PlayerView.proto";
import "google/protobuf/wrappers.proto";

package ItemProto;

message CreateTVMessageRequest {
	int32 masterId = 1;
	google.protobuf.StringValue toName = 2;
	int32 type = 3;
	repeated string messageList = 4;
	bool showEar = 5;
}

message CreateTVMessageResponse {
	int32 code = 1;
}

message CreateTVMessageBroadcast {
    Dto.PlayerViewDto master = 1;
    Dto.PlayerViewDto masterPartner = 2;
    int32 type = 3;
    repeated string messageList = 4;
	bool showEar = 5;
}
